--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@react-router/node": "^7.11.0",
     "@tailwindcss/vite": "^4.1.18",
+    "isbot": "^5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.18",
-    "isbot": "^5"
+    "react-router": "^7.11.0",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
